--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^19.1.0-canary-7b402084-20250107",
+    "react-dom": "^19.1.0-canary-7b402084-20250107"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
